parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     var_declaration -> type_specifier var_decl_list SEMICOLON
Rule 7     var_declaration -> type_specifier error SEMICOLON
Rule 8     var_decl_list -> var_decl_list COMMA var_decl_id
Rule 9     var_decl_list -> var_decl_id
Rule 10    var_decl_id -> ID
Rule 11    var_decl_id -> ID OPENBR NUMBER CLOSEBR
Rule 12    var_decl_id -> ID ASSIGN ID
Rule 13    var_decl_id -> ID ASSIGN NUMBER
Rule 14    var_decl_id -> ID ASSIGN FLOAT_NUMBER
Rule 15    var_decl_id -> ID ASSIGN STRING
Rule 16    type_specifier -> INT
Rule 17    type_specifier -> FLOAT
Rule 18    type_specifier -> VOID
Rule 19    type_specifier -> STRING
Rule 20    fun_declaration -> type_specifier ID LPAREN params RPAREN statement
Rule 21    params -> param_list
Rule 22    params -> <empty>
Rule 23    param_list -> param_list COMMA param_type_list
Rule 24    param_list -> param_type_list
Rule 25    param_type_list -> type_specifier param_id_list
Rule 26    param_id_list -> param_id_list COMMA param_id
Rule 27    param_id_list -> param_id
Rule 28    param_id -> ID
Rule 29    compound_stmt -> OBRACELET local_declarations statement_list local_declarations CBRACELET
Rule 30    local_declarations -> local_declarations var_declaration
Rule 31    local_declarations -> <empty>
Rule 32    statement_list -> statement statement_list
Rule 33    statement_list -> <empty>
Rule 34    statement -> expression_stmt
Rule 35    statement -> compound_stmt
Rule 36    statement -> if_stmt
Rule 37    statement -> while_stmt
Rule 38    statement -> for_stmt
Rule 39    statement -> do_while_stmt
Rule 40    statement -> break_stmt
Rule 41    expression_stmt -> expression SEMICOLON
Rule 42    expression_stmt -> SEMICOLON
Rule 43    do_while_stmt -> do statement while LPAREN expression RPAREN
Rule 44    do -> DO
Rule 45    if_stmt -> if LPAREN simple_expression RPAREN statement
Rule 46    if_stmt -> if LPAREN simple_expression RPAREN statement else statement
Rule 47    if -> IF
Rule 48    else -> ELSE
Rule 49    while_stmt -> while LPAREN expression RPAREN statement
Rule 50    while -> WHILE
Rule 51    for_stmt -> for LPAREN var_declaration expression semicolon expression epsilon RPAREN statement
Rule 52    semicolon -> SEMICOLON
Rule 53    epsilon -> <empty>
Rule 54    for -> FOR
Rule 55    break_stmt -> BREAK SEMICOLON
Rule 56    expression -> var ASSIGN expression
Rule 57    expression -> var addopration_expression expression
Rule 58    expression -> var mulopration_expression expression
Rule 59    expression -> ID PLUSPLUS
Rule 60    expression -> ID MINUSMINUS
Rule 61    expression -> simple_expression
Rule 62    addopration_expression -> PLUS_ASSIGN
Rule 63    addopration_expression -> MINUS_ASSIGN
Rule 64    mulopration_expression -> TIMES_ASSIGN
Rule 65    mulopration_expression -> DIVIDE_ASSIGN
Rule 66    var -> ID
Rule 67    var -> ID OPENBR NUMBER CLOSEBR
Rule 68    simple_expression -> simple_expression AND unary_rel_expression
Rule 69    simple_expression -> unary_rel_expression
Rule 70    unary_rel_expression -> NOTEQUAL unary_rel_expression
Rule 71    unary_rel_expression -> rel_expression
Rule 72    rel_expression -> add_expression relop add_expression
Rule 73    rel_expression -> add_expression
Rule 74    relop -> EQUALS
Rule 75    relop -> LESS
Rule 76    relop -> LARGE
Rule 77    relop -> LARGETHAN
Rule 78    relop -> LESSTHAN
Rule 79    relop -> NOTEQUAL
Rule 80    add_expression -> add_expression addop term
Rule 81    add_expression -> term
Rule 82    addop -> PLUS
Rule 83    addop -> MINUS
Rule 84    term -> term mulop unary_expression
Rule 85    term -> unary_expression
Rule 86    mulop -> TIMES
Rule 87    mulop -> DIVIDE
Rule 88    unary_expression -> addop unary_expression
Rule 89    unary_expression -> factor
Rule 90    factor -> LPAREN expression RPAREN
Rule 91    factor -> var
Rule 92    factor -> call
Rule 93    factor -> constant
Rule 94    constant -> TRUE
Rule 95    constant -> FALSE
Rule 96    constant -> NUMBER
Rule 97    constant -> FLOAT_NUMBER
Rule 98    call -> ID LPAREN args RPAREN
Rule 99    args -> args_list
Rule 100   args -> <empty>
Rule 101   args_list -> args_list COMMA expression
Rule 102   args_list -> expression

Terminals, with rules where they appear

AND                  : 68
ASSIGN               : 12 13 14 15 56
BREAK                : 55
CBRACELET            : 29
CLOSEBR              : 11 67
COMMA                : 8 23 26 101
DIVIDE               : 87
DIVIDE_ASSIGN        : 65
DO                   : 44
ELSE                 : 48
EQUALS               : 74
FALSE                : 95
FLOAT                : 17
FLOAT_NUMBER         : 14 97
FOR                  : 54
ID                   : 10 11 12 12 13 14 15 20 28 59 60 66 67 98
IF                   : 47
INT                  : 16
LARGE                : 76
LARGETHAN            : 77
LESS                 : 75
LESSTHAN             : 78
LPAREN               : 20 43 45 46 49 51 90 98
MINUS                : 83
MINUSMINUS           : 60
MINUS_ASSIGN         : 63
NOTEQUAL             : 70 79
NUMBER               : 11 13 67 96
OBRACELET            : 29
OPENBR               : 11 67
PLUS                 : 82
PLUSPLUS             : 59
PLUS_ASSIGN          : 62
RPAREN               : 20 43 45 46 49 51 90 98
SEMICOLON            : 6 7 41 42 52 55
STRING               : 15 19
TIMES                : 86
TIMES_ASSIGN         : 64
TRUE                 : 94
VOID                 : 18
WHILE                : 50
error                : 7

Nonterminals, with rules where they appear

add_expression       : 72 72 73 80
addop                : 80 88
addopration_expression : 57
args                 : 98
args_list            : 99 101
break_stmt           : 40
call                 : 92
compound_stmt        : 35
constant             : 93
declaration          : 2 3
declaration_list     : 1 2
do                   : 43
do_while_stmt        : 39
else                 : 46
epsilon              : 51
expression           : 41 43 49 51 51 56 57 58 90 101 102
expression_stmt      : 34
factor               : 89
for                  : 51
for_stmt             : 38
fun_declaration      : 5
if                   : 45 46
if_stmt              : 36
local_declarations   : 29 29 30
mulop                : 84
mulopration_expression : 58
param_id             : 26 27
param_id_list        : 25 26
param_list           : 21 23
param_type_list      : 23 24
params               : 20
program              : 0
rel_expression       : 71
relop                : 72
semicolon            : 51
simple_expression    : 45 46 61 68
statement            : 20 32 43 45 46 46 49 51
statement_list       : 29 32
term                 : 80 81 84
type_specifier       : 6 7 20 25
unary_expression     : 84 85 88
unary_rel_expression : 68 69 70
var                  : 56 57 58 91
var_decl_id          : 8 9
var_decl_list        : 6 8
var_declaration      : 4 30 51
while                : 43 49
while_stmt           : 37

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier var_decl_list SEMICOLON
    (7) var_declaration -> . type_specifier error SEMICOLON
    (20) fun_declaration -> . type_specifier ID LPAREN params RPAREN statement
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . VOID
    (19) type_specifier -> . STRING

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9
    STRING          shift and go to state 10

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier var_decl_list SEMICOLON
    (7) var_declaration -> . type_specifier error SEMICOLON
    (20) fun_declaration -> . type_specifier ID LPAREN params RPAREN statement
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . VOID
    (19) type_specifier -> . STRING

    $end            reduce using rule 1 (program -> declaration_list .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9
    STRING          shift and go to state 10

    declaration                    shift and go to state 11
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    STRING          reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    INT             reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    STRING          reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> fun_declaration .

    INT             reduce using rule 5 (declaration -> fun_declaration .)
    FLOAT           reduce using rule 5 (declaration -> fun_declaration .)
    VOID            reduce using rule 5 (declaration -> fun_declaration .)
    STRING          reduce using rule 5 (declaration -> fun_declaration .)
    $end            reduce using rule 5 (declaration -> fun_declaration .)


state 6

    (6) var_declaration -> type_specifier . var_decl_list SEMICOLON
    (7) var_declaration -> type_specifier . error SEMICOLON
    (20) fun_declaration -> type_specifier . ID LPAREN params RPAREN statement
    (8) var_decl_list -> . var_decl_list COMMA var_decl_id
    (9) var_decl_list -> . var_decl_id
    (10) var_decl_id -> . ID
    (11) var_decl_id -> . ID OPENBR NUMBER CLOSEBR
    (12) var_decl_id -> . ID ASSIGN ID
    (13) var_decl_id -> . ID ASSIGN NUMBER
    (14) var_decl_id -> . ID ASSIGN FLOAT_NUMBER
    (15) var_decl_id -> . ID ASSIGN STRING

    error           shift and go to state 13
    ID              shift and go to state 14

    var_decl_list                  shift and go to state 12
    var_decl_id                    shift and go to state 15

state 7

    (16) type_specifier -> INT .

    error           reduce using rule 16 (type_specifier -> INT .)
    ID              reduce using rule 16 (type_specifier -> INT .)


state 8

    (17) type_specifier -> FLOAT .

    error           reduce using rule 17 (type_specifier -> FLOAT .)
    ID              reduce using rule 17 (type_specifier -> FLOAT .)


state 9

    (18) type_specifier -> VOID .

    error           reduce using rule 18 (type_specifier -> VOID .)
    ID              reduce using rule 18 (type_specifier -> VOID .)


state 10

    (19) type_specifier -> STRING .

    error           reduce using rule 19 (type_specifier -> STRING .)
    ID              reduce using rule 19 (type_specifier -> STRING .)


state 11

    (2) declaration_list -> declaration_list declaration .

    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FLOAT           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    STRING          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 12

    (6) var_declaration -> type_specifier var_decl_list . SEMICOLON
    (8) var_decl_list -> var_decl_list . COMMA var_decl_id

    SEMICOLON       shift and go to state 16
    COMMA           shift and go to state 17


state 13

    (7) var_declaration -> type_specifier error . SEMICOLON

    SEMICOLON       shift and go to state 18


state 14

    (20) fun_declaration -> type_specifier ID . LPAREN params RPAREN statement
    (10) var_decl_id -> ID .
    (11) var_decl_id -> ID . OPENBR NUMBER CLOSEBR
    (12) var_decl_id -> ID . ASSIGN ID
    (13) var_decl_id -> ID . ASSIGN NUMBER
    (14) var_decl_id -> ID . ASSIGN FLOAT_NUMBER
    (15) var_decl_id -> ID . ASSIGN STRING

    LPAREN          shift and go to state 19
    SEMICOLON       reduce using rule 10 (var_decl_id -> ID .)
    COMMA           reduce using rule 10 (var_decl_id -> ID .)
    OPENBR          shift and go to state 20
    ASSIGN          shift and go to state 21


state 15

    (9) var_decl_list -> var_decl_id .

    SEMICOLON       reduce using rule 9 (var_decl_list -> var_decl_id .)
    COMMA           reduce using rule 9 (var_decl_list -> var_decl_id .)


state 16

    (6) var_declaration -> type_specifier var_decl_list SEMICOLON .

    INT             reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    FLOAT           reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    VOID            reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    STRING          reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    $end            reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    SEMICOLON       reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    OBRACELET       reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    BREAK           reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    ID              reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    IF              reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    WHILE           reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    FOR             reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    DO              reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    NOTEQUAL        reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    PLUS            reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    MINUS           reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    LPAREN          reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    TRUE            reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    FALSE           reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    NUMBER          reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    FLOAT_NUMBER    reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)
    CBRACELET       reduce using rule 6 (var_declaration -> type_specifier var_decl_list SEMICOLON .)


state 17

    (8) var_decl_list -> var_decl_list COMMA . var_decl_id
    (10) var_decl_id -> . ID
    (11) var_decl_id -> . ID OPENBR NUMBER CLOSEBR
    (12) var_decl_id -> . ID ASSIGN ID
    (13) var_decl_id -> . ID ASSIGN NUMBER
    (14) var_decl_id -> . ID ASSIGN FLOAT_NUMBER
    (15) var_decl_id -> . ID ASSIGN STRING

    ID              shift and go to state 23

    var_decl_id                    shift and go to state 22

state 18

    (7) var_declaration -> type_specifier error SEMICOLON .

    INT             reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    FLOAT           reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    VOID            reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    STRING          reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    $end            reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    SEMICOLON       reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    OBRACELET       reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    BREAK           reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    ID              reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    IF              reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    WHILE           reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    FOR             reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    DO              reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    NOTEQUAL        reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    PLUS            reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    MINUS           reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    LPAREN          reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    TRUE            reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    FALSE           reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    NUMBER          reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    FLOAT_NUMBER    reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)
    CBRACELET       reduce using rule 7 (var_declaration -> type_specifier error SEMICOLON .)


state 19

    (20) fun_declaration -> type_specifier ID LPAREN . params RPAREN statement
    (21) params -> . param_list
    (22) params -> .
    (23) param_list -> . param_list COMMA param_type_list
    (24) param_list -> . param_type_list
    (25) param_type_list -> . type_specifier param_id_list
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . VOID
    (19) type_specifier -> . STRING

    RPAREN          reduce using rule 22 (params -> .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9
    STRING          shift and go to state 10

    type_specifier                 shift and go to state 24
    params                         shift and go to state 25
    param_list                     shift and go to state 26
    param_type_list                shift and go to state 27

state 20

    (11) var_decl_id -> ID OPENBR . NUMBER CLOSEBR

    NUMBER          shift and go to state 28


state 21

    (12) var_decl_id -> ID ASSIGN . ID
    (13) var_decl_id -> ID ASSIGN . NUMBER
    (14) var_decl_id -> ID ASSIGN . FLOAT_NUMBER
    (15) var_decl_id -> ID ASSIGN . STRING

    ID              shift and go to state 29
    NUMBER          shift and go to state 30
    FLOAT_NUMBER    shift and go to state 31
    STRING          shift and go to state 32


state 22

    (8) var_decl_list -> var_decl_list COMMA var_decl_id .

    SEMICOLON       reduce using rule 8 (var_decl_list -> var_decl_list COMMA var_decl_id .)
    COMMA           reduce using rule 8 (var_decl_list -> var_decl_list COMMA var_decl_id .)


state 23

    (10) var_decl_id -> ID .
    (11) var_decl_id -> ID . OPENBR NUMBER CLOSEBR
    (12) var_decl_id -> ID . ASSIGN ID
    (13) var_decl_id -> ID . ASSIGN NUMBER
    (14) var_decl_id -> ID . ASSIGN FLOAT_NUMBER
    (15) var_decl_id -> ID . ASSIGN STRING

    SEMICOLON       reduce using rule 10 (var_decl_id -> ID .)
    COMMA           reduce using rule 10 (var_decl_id -> ID .)
    OPENBR          shift and go to state 20
    ASSIGN          shift and go to state 21


state 24

    (25) param_type_list -> type_specifier . param_id_list
    (26) param_id_list -> . param_id_list COMMA param_id
    (27) param_id_list -> . param_id
    (28) param_id -> . ID

    ID              shift and go to state 35

    param_id_list                  shift and go to state 33
    param_id                       shift and go to state 34

state 25

    (20) fun_declaration -> type_specifier ID LPAREN params . RPAREN statement

    RPAREN          shift and go to state 36


state 26

    (21) params -> param_list .
    (23) param_list -> param_list . COMMA param_type_list

    RPAREN          reduce using rule 21 (params -> param_list .)
    COMMA           shift and go to state 37


state 27

    (24) param_list -> param_type_list .

    COMMA           reduce using rule 24 (param_list -> param_type_list .)
    RPAREN          reduce using rule 24 (param_list -> param_type_list .)


state 28

    (11) var_decl_id -> ID OPENBR NUMBER . CLOSEBR

    CLOSEBR         shift and go to state 38


state 29

    (12) var_decl_id -> ID ASSIGN ID .

    SEMICOLON       reduce using rule 12 (var_decl_id -> ID ASSIGN ID .)
    COMMA           reduce using rule 12 (var_decl_id -> ID ASSIGN ID .)


state 30

    (13) var_decl_id -> ID ASSIGN NUMBER .

    SEMICOLON       reduce using rule 13 (var_decl_id -> ID ASSIGN NUMBER .)
    COMMA           reduce using rule 13 (var_decl_id -> ID ASSIGN NUMBER .)


state 31

    (14) var_decl_id -> ID ASSIGN FLOAT_NUMBER .

    SEMICOLON       reduce using rule 14 (var_decl_id -> ID ASSIGN FLOAT_NUMBER .)
    COMMA           reduce using rule 14 (var_decl_id -> ID ASSIGN FLOAT_NUMBER .)


state 32

    (15) var_decl_id -> ID ASSIGN STRING .

    SEMICOLON       reduce using rule 15 (var_decl_id -> ID ASSIGN STRING .)
    COMMA           reduce using rule 15 (var_decl_id -> ID ASSIGN STRING .)


state 33

    (25) param_type_list -> type_specifier param_id_list .
    (26) param_id_list -> param_id_list . COMMA param_id

  ! shift/reduce conflict for COMMA resolved as shift
    RPAREN          reduce using rule 25 (param_type_list -> type_specifier param_id_list .)
    COMMA           shift and go to state 39

  ! COMMA           [ reduce using rule 25 (param_type_list -> type_specifier param_id_list .) ]


state 34

    (27) param_id_list -> param_id .

    COMMA           reduce using rule 27 (param_id_list -> param_id .)
    RPAREN          reduce using rule 27 (param_id_list -> param_id .)


state 35

    (28) param_id -> ID .

    COMMA           reduce using rule 28 (param_id -> ID .)
    RPAREN          reduce using rule 28 (param_id -> ID .)


state 36

    (20) fun_declaration -> type_specifier ID LPAREN params RPAREN . statement
    (34) statement -> . expression_stmt
    (35) statement -> . compound_stmt
    (36) statement -> . if_stmt
    (37) statement -> . while_stmt
    (38) statement -> . for_stmt
    (39) statement -> . do_while_stmt
    (40) statement -> . break_stmt
    (41) expression_stmt -> . expression SEMICOLON
    (42) expression_stmt -> . SEMICOLON
    (29) compound_stmt -> . OBRACELET local_declarations statement_list local_declarations CBRACELET
    (45) if_stmt -> . if LPAREN simple_expression RPAREN statement
    (46) if_stmt -> . if LPAREN simple_expression RPAREN statement else statement
    (49) while_stmt -> . while LPAREN expression RPAREN statement
    (51) for_stmt -> . for LPAREN var_declaration expression semicolon expression epsilon RPAREN statement
    (43) do_while_stmt -> . do statement while LPAREN expression RPAREN
    (55) break_stmt -> . BREAK SEMICOLON
    (56) expression -> . var ASSIGN expression
    (57) expression -> . var addopration_expression expression
    (58) expression -> . var mulopration_expression expression
    (59) expression -> . ID PLUSPLUS
    (60) expression -> . ID MINUSMINUS
    (61) expression -> . simple_expression
    (47) if -> . IF
    (50) while -> . WHILE
    (54) for -> . FOR
    (44) do -> . DO
    (66) var -> . ID
    (67) var -> . ID OPENBR NUMBER CLOSEBR
    (68) simple_expression -> . simple_expression AND unary_rel_expression
    (69) simple_expression -> . unary_rel_expression
    (70) unary_rel_expression -> . NOTEQUAL unary_rel_expression
    (71) unary_rel_expression -> . rel_expression
    (72) rel_expression -> . add_expression relop add_expression
    (73) rel_expression -> . add_expression
    (80) add_expression -> . add_expression addop term
    (81) add_expression -> . term
    (84) term -> . term mulop unary_expression
    (85) term -> . unary_expression
    (88) unary_expression -> . addop unary_expression
    (89) unary_expression -> . factor
    (82) addop -> . PLUS
    (83) addop -> . MINUS
    (90) factor -> . LPAREN expression RPAREN
    (91) factor -> . var
    (92) factor -> . call
    (93) factor -> . constant
    (98) call -> . ID LPAREN args RPAREN
    (94) constant -> . TRUE
    (95) constant -> . FALSE
    (96) constant -> . NUMBER
    (97) constant -> . FLOAT_NUMBER

    SEMICOLON       shift and go to state 51
    OBRACELET       shift and go to state 52
    BREAK           shift and go to state 58
    ID              shift and go to state 40
    IF              shift and go to state 60
    WHILE           shift and go to state 61
    FOR             shift and go to state 62
    DO              shift and go to state 63
    NOTEQUAL        shift and go to state 66
    PLUS            shift and go to state 73
    MINUS           shift and go to state 74
    LPAREN          shift and go to state 41
    TRUE            shift and go to state 77
    FALSE           shift and go to state 78
    NUMBER          shift and go to state 64
    FLOAT_NUMBER    shift and go to state 79

    statement                      shift and go to state 42
    expression_stmt                shift and go to state 43
    compound_stmt                  shift and go to state 44
    if_stmt                        shift and go to state 45
    while_stmt                     shift and go to state 46
    for_stmt                       shift and go to state 47
    do_while_stmt                  shift and go to state 48
    break_stmt                     shift and go to state 49
    expression                     shift and go to state 50
    if                             shift and go to state 53
    simple_expression              shift and go to state 54
    while                          shift and go to state 55
    for                            shift and go to state 56
    do                             shift and go to state 57
    var                            shift and go to state 59
    unary_rel_expression           shift and go to state 65
    rel_expression                 shift and go to state 67
    add_expression                 shift and go to state 68
    addop                          shift and go to state 69
    term                           shift and go to state 70
    unary_expression               shift and go to state 71
    factor                         shift and go to state 72
    call                           shift and go to state 75
    constant                       shift and go to state 76

state 37

    (23) param_list -> param_list COMMA . param_type_list
    (25) param_type_list -> . type_specifier param_id_list
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . VOID
    (19) type_specifier -> . STRING

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9
    STRING          shift and go to state 10

    param_type_list                shift and go to state 80
    type_specifier                 shift and go to state 24

state 38

    (11) var_decl_id -> ID OPENBR NUMBER CLOSEBR .

    SEMICOLON       reduce using rule 11 (var_decl_id -> ID OPENBR NUMBER CLOSEBR .)
    COMMA           reduce using rule 11 (var_decl_id -> ID OPENBR NUMBER CLOSEBR .)


state 39

    (26) param_id_list -> param_id_list COMMA . param_id
    (28) param_id -> . ID

    ID              shift and go to state 35

    param_id                       shift and go to state 81

state 40

    (59) expression -> ID . PLUSPLUS
    (60) expression -> ID . MINUSMINUS
    (66) var -> ID .
    (67) var -> ID . OPENBR NUMBER CLOSEBR
    (98) call -> ID . LPAREN args RPAREN

    PLUSPLUS        shift and go to state 82
    MINUSMINUS      shift and go to state 83
    ASSIGN          reduce using rule 66 (var -> ID .)
    PLUS_ASSIGN     reduce using rule 66 (var -> ID .)
    MINUS_ASSIGN    reduce using rule 66 (var -> ID .)
    TIMES_ASSIGN    reduce using rule 66 (var -> ID .)
    DIVIDE_ASSIGN   reduce using rule 66 (var -> ID .)
    TIMES           reduce using rule 66 (var -> ID .)
    DIVIDE          reduce using rule 66 (var -> ID .)
    EQUALS          reduce using rule 66 (var -> ID .)
    LESS            reduce using rule 66 (var -> ID .)
    LARGE           reduce using rule 66 (var -> ID .)
    LARGETHAN       reduce using rule 66 (var -> ID .)
    LESSTHAN        reduce using rule 66 (var -> ID .)
    NOTEQUAL        reduce using rule 66 (var -> ID .)
    PLUS            reduce using rule 66 (var -> ID .)
    MINUS           reduce using rule 66 (var -> ID .)
    AND             reduce using rule 66 (var -> ID .)
    SEMICOLON       reduce using rule 66 (var -> ID .)
    RPAREN          reduce using rule 66 (var -> ID .)
    COMMA           reduce using rule 66 (var -> ID .)
    OPENBR          shift and go to state 84
    LPAREN          shift and go to state 85


state 41

    (90) factor -> LPAREN . expression RPAREN
    (56) expression -> . var ASSIGN expression
    (57) expression -> . var addopration_expression expression
    (58) expression -> . var mulopration_expression expression
    (59) expression -> . ID PLUSPLUS
    (60) expression -> . ID MINUSMINUS
    (61) expression -> . simple_expression
    (66) var -> . ID
    (67) var -> . ID OPENBR NUMBER CLOSEBR
    (68) simple_expression -> . simple_expression AND unary_rel_expression
    (69) simple_expression -> . unary_rel_expression
    (70) unary_rel_expression -> . NOTEQUAL unary_rel_expression
    (71) unary_rel_expression -> . rel_expression
    (72) rel_expression -> . add_expression relop add_expression
    (73) rel_expression -> . add_expression
    (80) add_expression -> . add_expression addop term
    (81) add_expression -> . term
    (84) term -> . term mulop unary_expression
    (85) term -> . unary_expression
    (88) unary_expression -> . addop unary_expression
    (89) unary_expression -> . factor
    (82) addop -> . PLUS
    (83) addop -> . MINUS
    (90) factor -> . LPAREN expression RPAREN
    (91) factor -> . var
    (92) factor -> . call
    (93) factor -> . constant
    (98) call -> . ID LPAREN args RPAREN
    (94) constant -> . TRUE
    (95) constant -> . FALSE
    (96) constant -> . NUMBER
    (97) constant -> . FLOAT_NUMBER

    ID              shift and go to state 40
    NOTEQUAL        shift and go to state 66
    PLUS            shift and go to state 73
    MINUS           shift and go to state 74
    LPAREN          shift and go to state 41
    TRUE            shift and go to state 77
    FALSE           shift and go to state 78
    NUMBER          shift and go to state 64
    FLOAT_NUMBER    shift and go to state 79

    expression                     shift and go to state 86
    var                            shift and go to state 59
    simple_expression              shift and go to state 54
    unary_rel_expression           shift and go to state 65
    rel_expression                 shift and go to state 67
    add_expression                 shift and go to state 68
    addop                          shift and go to state 69
    term                           shift and go to state 70
    unary_expression               shift and go to state 71
    factor                         shift and go to state 72
    call                           shift and go to state 75
    constant                       shift and go to state 76

state 42

    (20) fun_declaration -> type_specifier ID LPAREN params RPAREN statement .

    INT             reduce using rule 20 (fun_declaration -> type_specifier ID LPAREN params RPAREN statement .)
    FLOAT           reduce using rule 20 (fun_declaration -> type_specifier ID LPAREN params RPAREN statement .)
    VOID            reduce using rule 20 (fun_declaration -> type_specifier ID LPAREN params RPAREN statement .)
    STRING          reduce using rule 20 (fun_declaration -> type_specifier ID LPAREN params RPAREN statement .)
    $end            reduce using rule 20 (fun_declaration -> type_specifier ID LPAREN params RPAREN statement .)


state 43

    (34) statement -> expression_stmt .
